[package]
name = "aztec-special-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
hex = "0.4.3"
kalypso_matching_engine = { git = "https://github.com/marlinprotocol/kalypso-unified.git", branch = "listener-refined", package = "matching_engine" }
# kalypso_matching_engine = { path = "../kalypso-unified/matching_engine", package = "matching_engine" }
tokio = { version = "1.15.0", features = ["full"] }
